--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,15 @@ input, button, select {
   justify-content: space-around;
   max-width: 800px;
 }
+
+/* --- Home Page --- */
+#hero-product-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
+}
+
 /* --- Products Page --- */
 
 #search-field-section{
